fix: overflow added

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -39,7 +39,7 @@
 }
 
 body {
-  @apply overflow-hidden;
+  /* @apply overflow-hidden; */
   font-family: 'Lan';
 }
 
